################################################################################
# swig/CMakeLists.txt
#
# CMake file for swig frontends
################################################################################

add_subdirectory(python)
#add_subdirectory(java)
#add_subdirectory(perl5)

################################################################################
