################################################################################
# tbt/CMakeLists.txt
#
# CMake file for tbtrader library
################################################################################

add_library(tbt STATIC
  portfolio/portfolio.cpp
  )

################################################################################
